--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-
-title: Spirunilazur
+title: Spirulin'azur
 email: pelegrijulien@hotmail.fr
 description: >- # this means to ignore newlines until "baseurl:"
   Description of Spirunilazur website.
