--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: pelegrijulien@hotmail.fr
 description: >- # this means to ignore newlines until "baseurl:"
   Description of Spirunilazur website.
 # baseurl: "/spirunilazur" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.spirulinazur.com/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  PelDoingCode
 
